small test change

--- a/notebooks/predictions-annotated.ipynb
+++ b/notebooks/predictions-annotated.ipynb
@@ -76,8 +76,8 @@
     }
    ],
    "source": [
-    "dp=620.*pc\n",
-    "dlens=389.*pc\n",
+    "dp=620.* pc\n",
+    "dlens=389.* pc\n",
     "dlens"
    ]
   },
@@ -91,7 +91,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Deff=dp*dlens/(dp-dlens)\n",
@@ -230,7 +232,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dnd=dn"
