--- a/notebooks/17_predictions_Fold_object.ipynb
+++ b/notebooks/17_predictions_Fold_object.ipynb
@@ -77,8 +77,7 @@
     "dne = -(0.003*1.1 - 0.003)\n",
     "\n",
     "dns = [-wvl**2./(2.*np.pi)*dne*re for wvl in ls] \n",
-    "dn = -l**2./(2.*np.pi)*dne*re \n",
-    "dn"
+    "dn = -l**2./(2.*np.pi)*dne*re "
    ]
   },
   {
@@ -284,7 +283,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test = Fold('test', [16.2774788, 1.5], [0.0010368129, 0.0003])\n",
@@ -525,7 +526,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "folds = [Fold(str(arclets[i][0]), dtheta=[arclets[i][1], arclets[i][2]], mu=[arclets[i][3], arclets[i][4]]) for i in range(len(arclets))]"
