--- a/notebooks/17_predictions_Fold_object.ipynb
+++ b/notebooks/17_predictions_Fold_object.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -26,15 +28,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Setting the units, parameters of the pulsar and predictions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -42,7 +51,7 @@
        "1.2147852890204997e-13"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +92,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "All errors manipulated are fractionnal and dimensionless, the error analysis is still under development and need reviewing. It is documented in LaTex below for better reading.\n",
     "\n",
@@ -94,9 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -107,7 +121,7 @@
     "            name (string) : for printing purposes\n",
     "            dtheta, mu : 2-elements array or list, \n",
     "              error is the second value of the theta and mu lists,\n",
-    "              in the same dimensions\n",
+    "              in the same dimensions, if no error set to 0\n",
     "        return :\n",
     "            self.err_mu : fractionnal error on mu\n",
     "            self.err_dtheta : fractionnal error on dtheta\n",
@@ -246,7 +260,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Here is a readable explanation of error propagation into the Fold object, for simplicity, we note $\\frac{\\mu}{\\mu_0}$ as $\\mu$. All the analytical propagation have the actual calculation on the left and the error on the right. The rules used are that constant don't affect the error, a power multiplies the fractional error and products of powers use the general formula for $z= cx^Ny^M$,\n",
     "\n",
@@ -276,7 +293,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Testing bootstapping errors"
    ]
@@ -284,7 +304,11 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "test = Fold('test', [16.2774788, 1.5], [0.0010368129, 0.0003])\n",
@@ -296,7 +320,11 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -316,7 +344,11 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -333,7 +365,11 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -381,7 +417,11 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -438,7 +478,11 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -481,51 +525,61 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Predictions with arclets bright in freq 00"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  0.00000000e+00,   1.62775000e+01,   1.60107338e-01,\n",
-       "          1.11499714e-03,   5.34676869e-03],\n",
-       "       [  1.00000000e+00,   1.85079000e+01,   1.82045605e-01,\n",
-       "          2.05843433e-03,   9.87085241e-03],\n",
-       "       [  2.00000000e+00,   1.90237000e+01,   1.87119029e-01,\n",
-       "          1.38508566e-03,   6.64192968e-03],\n",
-       "       [  3.00000000e+00,   1.91462000e+01,   1.88323942e-01,\n",
-       "          1.04314493e-03,   5.00221430e-03],\n",
-       "       [  4.00000000e+00,   2.03450000e+01,   2.00115379e-01,\n",
-       "          1.13914473e-03,   5.46256412e-03],\n",
-       "       [  5.00000000e+00,   2.20030000e+01,   2.16423528e-01,\n",
-       "          1.25168843e-03,   6.00224723e-03],\n",
-       "       [  6.00000000e+00,   2.26010000e+01,   2.22305480e-01,\n",
-       "          1.24448022e-03,   5.96768153e-03],\n",
-       "       [  7.00000000e+00,   2.47330000e+01,   2.43275924e-01,\n",
-       "          7.35090703e-04,   3.52499554e-03]])"
+       "array([[  0.00000000e+00,   1.62775000e+01,   0.00000000e+00,\n",
+       "          1.11499714e-03,   0.00000000e+00],\n",
+       "       [  1.00000000e+00,   1.85079000e+01,   0.00000000e+00,\n",
+       "          2.05843433e-03,   0.00000000e+00],\n",
+       "       [  2.00000000e+00,   1.90237000e+01,   0.00000000e+00,\n",
+       "          1.38508566e-03,   0.00000000e+00],\n",
+       "       [  3.00000000e+00,   1.91462000e+01,   0.00000000e+00,\n",
+       "          1.04314493e-03,   0.00000000e+00],\n",
+       "       [  4.00000000e+00,   2.03450000e+01,   0.00000000e+00,\n",
+       "          1.13914473e-03,   0.00000000e+00],\n",
+       "       [  5.00000000e+00,   2.20030000e+01,   0.00000000e+00,\n",
+       "          1.25168843e-03,   0.00000000e+00],\n",
+       "       [  6.00000000e+00,   2.26010000e+01,   0.00000000e+00,\n",
+       "          1.24448022e-03,   0.00000000e+00],\n",
+       "       [  7.00000000e+00,   2.47330000e+01,   0.00000000e+00,\n",
+       "          7.35090703e-04,   0.00000000e+00]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arclets = np.loadtxt('../data/results/ratio_main_masks_method/arclet00_ID_dthetas_mus3001_vf.txt')\n",
-    "arclets"
+    "arclets = np.loadtxt('/mnt/scratch-lustre/bdesy/b0834/data/results/ratio_main_masks_method/arclet00_ID_dthetas_mus3001_vf.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "folds = [Fold(str(arclets[i][0]), dtheta=[arclets[i][1], arclets[i][2]], mu=[arclets[i][3], arclets[i][4]]) for i in range(len(arclets))]"
@@ -533,8 +587,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -543,14 +600,24 @@
      "output_type": "stream",
      "text": [
       "dtheta         theta        beta        R [pc]     more or less\n",
-      "16.2775       0.02722     -16.2503    145.2624     2089.941  \n",
-      "18.5079       0.05715     -18.4508    1736.962     24990.27  \n",
-      "19.0237       0.03952     -18.9842    607.1532     8735.325  \n",
-      "19.1462       0.02996     -19.1162    267.8184     3853.196  \n",
-      "20.345       0.03476     -20.3102    472.5183     6798.286  \n",
-      "22.003       0.04131     -21.9617    927.4525     13343.58  \n",
-      "22.601       0.04219     -22.5588    1042.307     14996.04  \n",
-      "24.733       0.02727     -24.7057    337.1322     4850.438  \n"
+      "16.2775       0.02722     -16.2503    145.2624     28.11531  \n",
+      "18.5079       0.05715     -18.4508    1736.962     336.1861  \n",
+      "19.0237       0.03952     -18.9842    607.1532     117.5135  \n",
+      "19.1462       0.02996     -19.1162    267.8184     51.83582  \n",
+      "20.345       0.03476     -20.3102    472.5183     91.45516  \n",
+      "22.003       0.04131     -21.9617    927.4525     179.5069  \n",
+      "22.601       0.04219     -22.5588    1042.307     201.7369  \n",
+      "24.733       0.02727     -24.7057    337.1322     65.2514  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "scripts/custom_functions.py:192: RuntimeWarning: invalid value encountered in power\n",
+      "  + ( s * dn * thetaR * thetaT)/(theta**3.*(1. + thetaR/(2. * theta))**(1./2.))))\n",
+      "scripts/custom_functions.py:192: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  + ( s * dn * thetaR * thetaT)/(theta**3.*(1. + thetaR/(2. * theta))**(1./2.))))\n"
      ]
     }
    ],
@@ -565,7 +632,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now that we have objects to work on, it greatly lessens the chances to mess around with lists and whatnot. \n",
     "\n",
@@ -577,7 +647,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -605,7 +679,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "To make measurements on the predictions, I need to retransform the $\\theta$ in $\\Delta\\theta$"
    ]
@@ -613,7 +690,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -642,7 +723,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -671,7 +756,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -727,7 +816,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -756,7 +849,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Testing for main arclet to see if 10x is a good approximation"
    ]
@@ -765,7 +861,9 @@
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -778,7 +876,9 @@
    "cell_type": "code",
    "execution_count": 84,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -788,7 +888,11 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -822,7 +926,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "source": [
     "# Represent discrepancy between measurements and predictions"
@@ -831,7 +937,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -869,7 +979,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -900,7 +1014,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -909,7 +1025,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
