--- a/notebooks/18_simulated_data.ipynb
+++ b/notebooks/18_simulated_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -55,7 +55,7 @@
     "N = 256         # size of the square dynamic and secondary spectra\n",
     "NF = 4096       # number of input magnification \"fluxes\" from flux.dat file\n",
     "\n",
-    "flux = np.loadtxt('../data/from_outside/simulation/flux.dat')\n",
+    "flux = np.loadtxt('/mnt/scratch-lustre/bdesy/b0834/data/from_outside/simulation/flux.dat')\n",
     "\n",
     "i=np.linspace(0,NF-1,NF)\n",
     "x = (i-NF/2)/(NF/2)\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -89,7 +89,7 @@
        "(256, 256)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
